Project ConectaFacilDB {
  database_type: 'SQLite'
  Note: '''
    Banco de Dados do sistema ConectaFácil, que conecta candidatos a vagas de emprego com empresas e recrutadores.
    O banco de dados é usado tanto pelo frontend web quanto pelo mobile.
  '''
}

//Documentação do DBML https://dbml.dbdiagram.io/home

/*
    O usuário pode se cadastrar no sistema com email e senha (web e mobile) e,
     depois completar seu perfil com informações adicionais.

      CANDIDATE: Uso sempre pelo celular (implementação futura: também mexer pelo web);
      ADMIN e RECRUITER: Uso sempre pelo web;

    //A validação do CPF ou CNPJ deve ser realizada pelo backend, no momento do cadastro do usuário.
     O backend deve validar o CPF ou CNPJ e, caso seja inválido, retornar um erro para o frontend.  

     Fluxo do Sistema: Usuário se cadastra com email e senha; Se candidato pode ver as vagas disponíveis;
                       Se recrutador pode criar vagas; Se administrador pode gerenciar usuários e vagas.
                       O CANDIDATE pode se candidatar a vagas, mas não pode criar ou gerenciar vagas. 
                       O RECRUITER pode criar e gerenciar vagas, mas não pode se candidatar a vagas.
                       O ADMIN pode gerenciar usuários e vagas, mas não pode se candidatar a vagas nem criar vagas.
                       Quando um CANDIDATE se candidata a uma vaga, o RECRUITER recebe uma notificação por e-mail 
                       e pode visualizar o perfil do CANDIDATE e o CANDIDATE passa a ver o e-mail da empresa.
        
*/

//Tabela com o cadastro dos usuários do sistema (candidatos, recrutadores e administradores).
Table users {
  id integer [primary key]
  email text [not null, unique, note: "O email é usado como login do usuário."]
  verified_email integer [not null, default: 0, note: "0 = não verificado, 1 = verificado"]
  code_email_verification text [note: "Código de verificação enviado por email. Se o usuário for verificado, este campo será nulo."]
  password_hash text [not null, note: "Hash criptografado da senha. A senha original não é armazenada nem pode ser recuperada."]
  user_type text [not null, default: "CANDIDATE", note: "Ex: CANDIDATE, RECRUITER, ADMIN", checks: "user_type IN ('CANDIDATE', 'RECRUITER', 'ADMIN')"]
  full_name text [not null, note: "Nome completo do usuário."]
  avatar_url text [note: "URL da imagem de avatar/foto do usuário."]
  phone text [note: "Número de telefone do usuário. Padrão internacional: (11)99999-9999 ou (11)9999-9999"]
  document_type text [not null, note: "Tipo de documento do usuário. CANDIDATE: CPF; RECRUITER: CPF ou CNPJ.", checks: "document_type IN ('CPF', 'CNPJ')"]
  document_number text [not null, unique, note: "Número do documento do usuário. CANDIDATE: sempre CPF; RECRUITER: CPF ou CNPJ."]
  code_expires_at timestamp [note: "Data e hora limite para utilização do código de verificação enviado por email."]
  active_notification integer [not null, default: 1, note: "0 = notificações desativadas, 1 = notificações ativas."]
  created_at text [not null, note: "ISO-8601 UTC. No schema.sql: DEFAULT (strftime('%Y-%m-%dT%H:%M:%SZ','now'))"]
  updated_at text [not null, note: "ISO-8601 UTC. Atualizado pelo trigger trg_users_updated_at."]
  deleted_at timestamp [note: "Data e hora da exclusão lógica do usuário; nulo indica que o registro está ativo."]

  indexes {
    email [name: "idx_user_email"]
    user_type [name: "idx_user_type"]
    full_name [name: "idx_user_full_name"]
    document_number [name: "idx_user_document_number"]
  }

  records (email, verified_email, password_hash, user_type, full_name, phone, document_type, document_number, active_notification) {
     'admin@admin.com', 1, '$2b$12$hash-ilustrativo', 'ADMIN', 'Administrador do Sistema', '(11)99999-9999', 'CPF', '11144477735', 1
  }
}

//Tabela de interesses do usuário a vagas disponíveis que o usuário deseja receber notificações.
Table interests {
  id integer [primary key]
  user_id integer [not null, note: "ID do usuário que tem interesse na categoria de vaga."]
  vacancy_id integer [not null, note: "ID da vaga que o usuário tem interesse."]
  status text [not null, default: "PENDING", note: "Estado da candidatura à vaga.", checks: "status IN ('PENDING', 'ACCEPTED', 'REJECTED')"]
  created_at text [not null, note: "ISO-8601 UTC. No schema.sql: DEFAULT (strftime('%Y-%m-%dT%H:%M:%SZ','now'))"]
  updated_at text [not null, note: "ISO-8601 UTC. Atualizado pelo trigger trg_interests_updated_at."]

  indexes {
    (user_id, vacancy_id) [unique, name: "interests_user_id_vacancy_id_unique", note: "Impede que o mesmo candidato se candidate mais de uma vez à mesma vaga."]
  }
}

//Tabela de vagas de emprego disponíveis no sistema. Somente o RECRUITER podem criar, atualizar e "deletar" vagas.
// O CANDIDATE apenas visualiza as vagas.
Table vacancies {
  id integer [primary key]
  user_id integer [not null, note: "ID do usuário que criou a vaga. Somente RECRUITER podem criar vagas."]
  job_title text [not null, note: "Ex: Desenvolvedor(a) Front-end, Analista de Marketing, Enfermeiro(a), Vendedor(a), etc."]
  company_name text [not null, note: "Nome da empresa que oferece a vaga."]
  company_sector text [note: "Setor de atuação da empresa. Ex: Tecnologia, Saúde, Educação, Varejo, Indústria, Serviços, etc."]
  job_description text [not null, note: "Descrição detalhada da vaga, incluindo responsabilidades e informações gerais da oportunidade."]
  requirements text [note: "Requisitos técnicos, comportamentais e de experiência para a vaga."]
  benefits text [note: "Benefícios oferecidos pela empresa. Ex: Vale transporte, Vale refeição, Plano de saúde, Seguro de vida, etc."]
  location text [note: "Localização da vaga ou indicação da região de trabalho."]
  work_model text [not null, default: "ONSITE", note: "Modelo de trabalho da vaga.", checks: "work_model IN ('REMOTE', 'HYBRID', 'ONSITE')"]
  contract_type text [not null, default: "CLT", note: "Tipo de contrato da vaga.", checks: "contract_type IN ('CLT', 'PJ', 'INTERNSHIP', 'FREELANCE')"]
  salary_min real [note: "Valor mínimo da faixa salarial da vaga."]
  salary_max real [note: "Valor máximo da faixa salarial da vaga."]
  status text [not null, default: "OPEN", note: "Situação de publicação da vaga.", checks: "status IN ('OPEN', 'CLOSED')"]
  created_at text [not null, note: "ISO-8601 UTC. No schema.sql: DEFAULT (strftime('%Y-%m-%dT%H:%M:%SZ','now'))"]
  updated_at text [not null, note: "ISO-8601 UTC. Atualizado pelo trigger trg_vacancies_updated_at."]
  deleted_at timestamp [note: "Data e hora da exclusão lógica da vaga; nulo indica que a vaga não foi excluída."]

  indexes {
    job_title [name: "idx_vacancy_job_title"]
    company_sector [name: "idx_vacancy_company_sector"]
    (salary_min, salary_max) [name: "idx_vacancy_salary_value", note: "Índice composto para consultas por faixa salarial."]
    created_at [name: "idx_vacancy_created_at"]
    job_description [name: "idx_vacancy_job_description"]
  }
}

Ref: interests.user_id > users.id [delete: restrict]
Ref: vacancies.user_id > users.id [delete: restrict]
Ref: interests.vacancy_id > vacancies.id [delete: restrict]

/* 
   Habilitar o PRAGMA foreign_keys = ON e o RESTRICT para o CASCADE.
   
   A atualização de updated_at é feita por trigger no banco (ver schema.sql),
   para acontecer automaticamente em qualquer alteração do registro.

*/